# treuksbot

./: .gitignore  Cargo.toml  EXAMPLE_SECRET_FILE.toml  README.md  ToDo.txt
.github/workflows/: quickstart.yml
src/: configparser.rs  lib.rs  main.rs
src/api/: definition.rs  helix.rs  libre_translate.rs  lingva_translate.rs  mod.rs  sanitization.rs  status.rs  translate.rs  translation.rs  types.rs  weather.rs
src/internal/: lingva_translate.rs  mod.rs  ping.rs  say.rs  tucking.rs  weather.rs
