[package]
name = "treuksbot"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
serde = "1.0.130"
serde_json = "1.0"
toml = "0.5.8"
toml_edit = "0.8.0"
twitch-irc = { version = "3.0.1", features = ["refreshing-token"] }
reqwest = { version = "0.11.6", features = ["json"]}