[package]
name = "treuksbot"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
serde = "1.0.130"
serde_json = "1.0"
toml = "0.5.8"
toml_edit = "0.13.0"
twitch-irc = { version = "4.0.0", features = ["refreshing-token"] }
reqwest = { version = "0.11.6", features = ["json"]}
humantime = "2.1.0"
http = "0.2"
